Fri Sep 07 12:12:39 2001  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv1/Iterative_Logging_Server.dsp:
        * examples/C++NPv1/Logging_Client.dsp:
        * examples/C++NPv1/Process_Per_Connection_Logging_Server.dsp:
        * examples/C++NPv1/RT_Thread_Per_Connection_Logging_Server.dsp:
        * examples/C++NPv1/Reactive_Logging_Server.dsp:
        * examples/C++NPv1/Reactive_Logging_Server_Ex.dsp:
        * examples/C++NPv1/Thread_Per_Connection_Logging_Server.dsp:
          Use relative paths to include and library files rather than
          $(ACE_ROOT). Makes it easier to use in place regardless of
          ACE version.

        * examples/C++NPv1/Logging_Client.cpp: Fixed scoping of the getline()
          method call.

Thu Sep  6 21:14:05 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Logging_Strategy_Test.cpp: Changed the usage of auto_ptr
	  <> to ACE_Auto_Basic_Ptr<>. Thanks to Carlos O'Ryan for this
	  suggestion. 

Thu Sep 06 18:42:39 2001  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv1: New directory that contains all of the example
          code for Doug/my book, C++ Network Programming, Vol 1.

Thu Sep  6 12:01:15 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/OS.h: 
	  Added a if-def case for IP_MULTICAST_IF. Seems like it is not
	  defined in some of the OS versions.

Thu Sep 06 12:36:43 2001  Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>

	* ace/OS.h: 
	* ace/OS.i: 	
	* ace/QoS/QoS_Session_Impl.cpp:
	* ace/QoS/QoS_Session.h:	

	  Fixed compile errors.

Thu Sep  6 10:24:15 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Acceptor.cpp (accept_svc_handler):
	* ace/Strategies_T.cpp (accept_svc_handler):

	  Do not close and reopen the peer acceptor on failed attempts to
	  accept a connection.  Several problems were fixed by removing
	  this code:

		- A race condition existed where another thread or process
		could acquire the port that the peer acceptor was